tests/error/effects_errors/pure_comptime_calls_impure_decl.py
from guppylang.decorator import guppy

@guppy.declare
def impure_func(x: int) -> int:
    ...

@guppy.comptime(effects=[])
def main() -> int:
    return impure_func(5)

main.compile()
